# trie

./: CMakeLists.txt
includes/: fruits.cpp  node.h  trie.h
src/: main.cpp  trie.cpp
